--- a/static/index.html
+++ b/static/index.html
@@ -7,4 +7,7 @@
 <body>
     <h2>Tela de dashboard para monitoramento</h2>
 </body>
+<script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+<script type="text/javascript" src="/src/index.js"></script>
 </html>
